[package]
name = "xwf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "0.2.11"
winapi = { version="0.3.9", features = ["consoleapi", "minwindef", "ntdef", "libloaderapi"] }
bitflags = { version = "2.4.0", features = [] }
once_cell = "1.18.0"
hex = "0.4.3"
simplelog = "0.12.1"
log = "0.4.20"

[lib]
crate-type = ["lib"]
