[package]
name = "xwf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "0.2.11"
winapi = { version="0.3.9", features = ["consoleapi", "minwindef", "ntdef", "libloaderapi"] }
bitflags = { version = "2.4.0", features = ["serde"] }
once_cell = "1.18.0"
hex = "0.4.3"
simplelog = "0.12.1"
log = "0.4.20"
chrono = {  version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
regex = "1.10.5"

[lib]
crate-type = ["lib"]

[features]
debug_output = []
