[package]
name = "xt-count-items-rs"
version = "0.0.1"
edition = "2021"


[lib]
crate-type = ["cdylib"]



[dependencies]
xwf-api-rs = { git = "https://github.com/ThomasVogl/xwf-api-rs.git", branch = "develop", features = ["debug_output"]}

# remove below lines if you use this example project as boilerplate
[patch.'https://github.com/ThomasVogl/xwf-api-rs.git']
xwf-api-rs = { path = "../../xwf_api_rs" }